<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}"
    android:background="@color/app_background" >
    
    <ImageView 
        android:id="@+id/record_audio"
        android:layout_centerInParent="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/record_button"
        android:src="@drawable/microphone_start"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        
        <ImageView 
	        android:id="@+id/play_audio"
	        android:layout_margin="20dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/playback_button"
	        android:src="@drawable/play"/>
	    
	    <ImageView 
	        android:id="@+id/ok"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/ok"
	        android:layout_margin="20dp"
	        android:src="@drawable/ok"/>
	    
    </LinearLayout>
    
    
    
    

</RelativeLayout>
