<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}"
    android:background="@color/gray" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        
        <Button 
            android:id="@+id/newDrawing"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/new_drawing"/>
        
        <Button 
            android:id="@+id/chooseBrush"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/brush"/>
        
        <Button 
            android:id="@+id/chooseEraser"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eraser"/>
        
        <Button 
            android:id="@+id/saveDrawing"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save_and_send"/>
    </LinearLayout>
    
    <com.android.wondercom.CustomViews.DrawingView
        android:id="@+id/drawing"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_marginBottom="3dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="3dp"
	    android:layout_weight="1"
	    android:background="@color/white" />
    
    <LinearLayout
        android:id="@+id/colorPalette"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:orientation="horizontal" >
        
        <ImageButton
	    android:layout_width="@dimen/large_brush"
	    android:layout_height="@dimen/large_brush"
	    android:layout_margin="2dp"
	    android:background="@color/black"
	    android:contentDescription="@string/paint"
	    android:onClick="paintClicked"
	    android:src="@drawable/paint"
	    android:tag="@color/black" />
	 
	<ImageButton
	    android:layout_width="@dimen/large_brush"
	    android:layout_height="@dimen/large_brush"
	    android:layout_margin="2dp"
	    android:background="@color/red"
	    android:contentDescription="@string/paint"
	    android:onClick="paintClicked"
	    android:src="@drawable/paint"
	    android:tag="@color/red" />
	 
	<ImageButton
	    android:layout_width="@dimen/large_brush"
	    android:layout_height="@dimen/large_brush"
	    android:layout_margin="2dp"
	    android:background="@color/yellow"
	    android:contentDescription="@string/paint"
	    android:onClick="paintClicked"
	    android:src="@drawable/paint"
	    android:tag="@color/yellow" />
	 
	<ImageButton
	    android:layout_width="@dimen/large_brush"
	    android:layout_height="@dimen/large_brush"
	    android:layout_margin="2dp"
	    android:background="@color/purple"
	    android:contentDescription="@string/paint"
	    android:onClick="paintClicked"
	    android:src="@drawable/paint"
	    android:tag="@color/purple" />
	 
	<ImageButton
	    android:layout_width="@dimen/large_brush"
	    android:layout_height="@dimen/large_brush"
	    android:layout_margin="2dp"
	    android:background="@color/green"
	    android:contentDescription="@string/paint"
	    android:onClick="paintClicked"
	    android:src="@drawable/paint"
	    android:tag="@color/green" />
	 
	<ImageButton
	    android:layout_width="@dimen/large_brush"
	    android:layout_height="@dimen/large_brush"
	    android:layout_margin="2dp"
	    android:background="@color/blue"
	    android:contentDescription="@string/paint"
	    android:onClick="paintClicked"
	    android:src="@drawable/paint"
	    android:tag="@color/blue" />

	</LinearLayout>

</LinearLayout>